--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-DISCORD_BOT_TOKEN=your_discord_bot_token
+DISCORD_BOT_TOKEN=${DISCORD_BOT_TOKEN}
 DB_USER=postgres
-DB_PASSWORD=strong_password
+DB_PASSWORD=postgres
 DB_NAME=discord_rag
-OPENAI_API_KEY=your_openai_api_key
+OPENAI_API_KEY=${OPENAI_API_KEY}
+OPENROUTER_API_KEY=${OPENROUTER_API_KEY}
